Offline 3 - Syntax & Semantic Analyser/1705069/y.output
Terminals unused in grammar

    IF
    FOR
    DO
    SWITCH
    DEFAULT
    ELSE
    WHILE
    BREAK
    CHAR
    DOUBLE
    RETURN
    CASE
    CONTINUE
    NOT
    PRINTLN
    STRING
    CONST_CHAR
    BITOP


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 $@1: %empty

    7 func_definition: type_specifier ID LPAREN RPAREN $@1 compound_statement

    8 $@2: %empty

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@2 compound_statement

   10 parameter_list: parameter_list COMMA type_specifier ID
   11               | parameter_list COMMA type_specifier
   12               | type_specifier ID
   13               | type_specifier
   14               | parameter_list COMMA error ID
   15               | error ID

   16 var_declaration: type_specifier declaration_list SEMICOLON
   17                | type_specifier declaration_list error

   18 type_specifier: INT
   19               | FLOAT
   20               | VOID

   21 declaration_list: declaration_list COMMA ID
   22                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   23                 | ID
   24                 | ID LTHIRD CONST_INT RTHIRD
   25                 | ID LTHIRD error RTHIRD
   26                 | declaration_list COMMA ID LTHIRD error RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: var_declaration
   30          | expression_statement
   31          | compound_statement

   32 expression_statement: SEMICOLON
   33                     | expression SEMICOLON
   34                     | expression error

   35 expression: logic_expression
   36           | variable ASSIGNOP logic_expression

   37 logic_expression: simple_expression
   38                 | rel_expression LOGICOP rel_expression

   39 rel_expression: simple_expression
   40               | simple_expression RELOP simple_expression

   41 simple_expression: term
   42                  | simple_expression ADDOP term

   43 term: unary_expression
   44     | term MULOP unary_expression

   45 unary_expression: factor

   46 factor: variable
   47       | CONST_INT
   48       | CONST_FLOAT
   49       | variable INCOP
   50       | variable DECOP

   51 variable: ID
   52         | ID LTHIRD expression RTHIRD

   53 $@3: %empty

   54 compound_statement: LCURL $@3 statements RCURL

   55 $@4: %empty

   56 compound_statement: LCURL $@4 RCURL


Terminals, with rules where they appear

    $end (0) 0
    error (256) 14 15 17 25 26 34
    IF (258)
    FOR (259)
    DO (260)
    INT (261) 18
    FLOAT (262) 19
    VOID (263) 20
    SWITCH (264)
    DEFAULT (265)
    ELSE (266)
    WHILE (267)
    BREAK (268)
    CHAR (269)
    DOUBLE (270)
    RETURN (271)
    CASE (272)
    CONTINUE (273)
    INCOP (274) 49
    DECOP (275) 50
    ASSIGNOP (276) 36
    NOT (277)
    LPAREN (278) 7 9
    RPAREN (279) 7 9
    LCURL (280) 54 56
    RCURL (281) 54 56
    LTHIRD (282) 22 24 25 26 52
    RTHIRD (283) 22 24 25 26 52
    COMMA (284) 10 11 14 21 22 26
    SEMICOLON (285) 16 32 33
    PRINTLN (286)
    STRING (287)
    ID <symbol> (288) 7 9 10 12 14 15 21 22 23 24 25 26 51 52
    CONST_INT <symbol> (289) 22 24 47
    CONST_FLOAT <symbol> (290) 48
    CONST_CHAR <symbol> (291)
    ADDOP <symbol> (292) 42
    MULOP <symbol> (293) 44
    LOGICOP <symbol> (294) 38
    RELOP <symbol> (295) 40
    BITOP <symbol> (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    start <symbol> (43)
        on left: 1
        on right: 0
    program <symbol> (44)
        on left: 2 3
        on right: 1 2
    unit <symbol> (45)
        on left: 4 5
        on right: 2 3
    func_definition <symbol> (46)
        on left: 7 9
        on right: 5
    $@1 (47)
        on left: 6
        on right: 7
    $@2 (48)
        on left: 8
        on right: 9
    parameter_list <symbol> (49)
        on left: 10 11 12 13 14 15
        on right: 9 10 11 14
    var_declaration <symbol> (50)
        on left: 16 17
        on right: 4 29
    type_specifier <symbol> (51)
        on left: 18 19 20
        on right: 7 9 10 11 12 13 16 17
    declaration_list <symbol> (52)
        on left: 21 22 23 24 25 26
        on right: 16 17 21 22 26
    statements <symbol> (53)
        on left: 27 28
        on right: 28 54
    statement <symbol> (54)
        on left: 29 30 31
        on right: 27 28
    expression_statement <symbol> (55)
        on left: 32 33 34
        on right: 30
    expression <symbol> (56)
        on left: 35 36
        on right: 33 34 52
    logic_expression <symbol> (57)
        on left: 37 38
        on right: 35 36
    rel_expression <symbol> (58)
        on left: 39 40
        on right: 38
    simple_expression <symbol> (59)
        on left: 41 42
        on right: 37 39 40 42
    term <symbol> (60)
        on left: 43 44
        on right: 41 42 44
    unary_expression <symbol> (61)
        on left: 45
        on right: 43 44
    factor <symbol> (62)
        on left: 46 47 48 49 50
        on right: 45
    variable <symbol> (63)
        on left: 51 52
        on right: 36 46 49 50
    compound_statement <symbol> (64)
        on left: 54 56
        on right: 7 9 31
    $@3 (65)
        on left: 53
        on right: 54
    $@4 (66)
        on left: 55
        on right: 56


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   18 type_specifier: INT .

    $default  reduce using rule 18 (type_specifier)


State 2

   19 type_specifier: FLOAT .

    $default  reduce using rule 19 (type_specifier)


State 3

   20 type_specifier: VOID .

    $default  reduce using rule 20 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    7 func_definition: type_specifier . ID LPAREN RPAREN $@1 compound_statement
    9                | type_specifier . ID LPAREN parameter_list RPAREN $@2 compound_statement
   16 var_declaration: type_specifier . declaration_list SEMICOLON
   17                | type_specifier . declaration_list error

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    7 func_definition: type_specifier ID . LPAREN RPAREN $@1 compound_statement
    9                | type_specifier ID . LPAREN parameter_list RPAREN $@2 compound_statement
   23 declaration_list: ID .
   24                 | ID . LTHIRD CONST_INT RTHIRD
   25                 | ID . LTHIRD error RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 23 (declaration_list)


State 13

   16 var_declaration: type_specifier declaration_list . SEMICOLON
   17                | type_specifier declaration_list . error
   21 declaration_list: declaration_list . COMMA ID
   22                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD
   26                 | declaration_list . COMMA ID LTHIRD error RTHIRD

    error      shift, and go to state 16
    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 14

    7 func_definition: type_specifier ID LPAREN . RPAREN $@1 compound_statement
    9                | type_specifier ID LPAREN . parameter_list RPAREN $@2 compound_statement

    error   shift, and go to state 19
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 20

    parameter_list  go to state 21
    type_specifier  go to state 22


State 15

   24 declaration_list: ID LTHIRD . CONST_INT RTHIRD
   25                 | ID LTHIRD . error RTHIRD

    error      shift, and go to state 23
    CONST_INT  shift, and go to state 24


State 16

   17 var_declaration: type_specifier declaration_list error .

    $default  reduce using rule 17 (var_declaration)


State 17

   21 declaration_list: declaration_list COMMA . ID
   22                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD
   26                 | declaration_list COMMA . ID LTHIRD error RTHIRD

    ID  shift, and go to state 25


State 18

   16 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 16 (var_declaration)


State 19

   15 parameter_list: error . ID

    ID  shift, and go to state 26


State 20

    7 func_definition: type_specifier ID LPAREN RPAREN . $@1 compound_statement

    $default  reduce using rule 6 ($@1)

    $@1  go to state 27


State 21

    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN $@2 compound_statement
   10 parameter_list: parameter_list . COMMA type_specifier ID
   11               | parameter_list . COMMA type_specifier
   14               | parameter_list . COMMA error ID

    RPAREN  shift, and go to state 28
    COMMA   shift, and go to state 29


State 22

   12 parameter_list: type_specifier . ID
   13               | type_specifier .

    ID  shift, and go to state 30

    $default  reduce using rule 13 (parameter_list)


State 23

   25 declaration_list: ID LTHIRD error . RTHIRD

    RTHIRD  shift, and go to state 31


State 24

   24 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 32


State 25

   21 declaration_list: declaration_list COMMA ID .
   22                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD
   26                 | declaration_list COMMA ID . LTHIRD error RTHIRD

    LTHIRD  shift, and go to state 33

    $default  reduce using rule 21 (declaration_list)


State 26

   15 parameter_list: error ID .

    $default  reduce using rule 15 (parameter_list)


State 27

    7 func_definition: type_specifier ID LPAREN RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 34

    compound_statement  go to state 35


State 28

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . $@2 compound_statement

    $default  reduce using rule 8 ($@2)

    $@2  go to state 36


State 29

   10 parameter_list: parameter_list COMMA . type_specifier ID
   11               | parameter_list COMMA . type_specifier
   14               | parameter_list COMMA . error ID

    error  shift, and go to state 37
    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 38


State 30

   12 parameter_list: type_specifier ID .

    $default  reduce using rule 12 (parameter_list)


State 31

   25 declaration_list: ID LTHIRD error RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 32

   24 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 24 (declaration_list)


State 33

   22 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD
   26                 | declaration_list COMMA ID LTHIRD . error RTHIRD

    error      shift, and go to state 39
    CONST_INT  shift, and go to state 40


State 34

   54 compound_statement: LCURL . $@3 statements RCURL
   56                   | LCURL . $@4 RCURL

    RCURL     reduce using rule 55 ($@4)
    $default  reduce using rule 53 ($@3)

    $@3  go to state 41
    $@4  go to state 42


State 35

    7 func_definition: type_specifier ID LPAREN RPAREN $@1 compound_statement .

    $default  reduce using rule 7 (func_definition)


State 36

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 34

    compound_statement  go to state 43


State 37

   14 parameter_list: parameter_list COMMA error . ID

    ID  shift, and go to state 44


State 38

   10 parameter_list: parameter_list COMMA type_specifier . ID
   11               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 45

    $default  reduce using rule 11 (parameter_list)


State 39

   26 declaration_list: declaration_list COMMA ID LTHIRD error . RTHIRD

    RTHIRD  shift, and go to state 46


State 40

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 47


State 41

   54 compound_statement: LCURL $@3 . statements RCURL

    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    LCURL        shift, and go to state 34
    SEMICOLON    shift, and go to state 48
    ID           shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51

    var_declaration       go to state 52
    type_specifier        go to state 53
    statements            go to state 54
    statement             go to state 55
    expression_statement  go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63
    variable              go to state 64
    compound_statement    go to state 65


State 42

   56 compound_statement: LCURL $@4 . RCURL

    RCURL  shift, and go to state 66


State 43

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN $@2 compound_statement .

    $default  reduce using rule 9 (func_definition)


State 44

   14 parameter_list: parameter_list COMMA error ID .

    $default  reduce using rule 14 (parameter_list)


State 45

   10 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 46

   26 declaration_list: declaration_list COMMA ID LTHIRD error RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 47

   22 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 22 (declaration_list)


State 48

   32 expression_statement: SEMICOLON .

    $default  reduce using rule 32 (expression_statement)


State 49

   51 variable: ID .
   52         | ID . LTHIRD expression RTHIRD

    LTHIRD  shift, and go to state 67

    $default  reduce using rule 51 (variable)


State 50

   47 factor: CONST_INT .

    $default  reduce using rule 47 (factor)


State 51

   48 factor: CONST_FLOAT .

    $default  reduce using rule 48 (factor)


State 52

   29 statement: var_declaration .

    $default  reduce using rule 29 (statement)


State 53

   16 var_declaration: type_specifier . declaration_list SEMICOLON
   17                | type_specifier . declaration_list error

    ID  shift, and go to state 68

    declaration_list  go to state 13


State 54

   28 statements: statements . statement
   54 compound_statement: LCURL $@3 statements . RCURL

    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    LCURL        shift, and go to state 34
    RCURL        shift, and go to state 69
    SEMICOLON    shift, and go to state 48
    ID           shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51

    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 70
    expression_statement  go to state 56
    expression            go to state 57
    logic_expression      go to state 58
    rel_expression        go to state 59
    simple_expression     go to state 60
    term                  go to state 61
    unary_expression      go to state 62
    factor                go to state 63
    variable              go to state 64
    compound_statement    go to state 65


State 55

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 56

   30 statement: expression_statement .

    $default  reduce using rule 30 (statement)


State 57

   33 expression_statement: expression . SEMICOLON
   34                     | expression . error

    error      shift, and go to state 71
    SEMICOLON  shift, and go to state 72


State 58

   35 expression: logic_expression .

    $default  reduce using rule 35 (expression)


State 59

   38 logic_expression: rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 73


State 60

   37 logic_expression: simple_expression .
   39 rel_expression: simple_expression .
   40               | simple_expression . RELOP simple_expression
   42 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 74
    RELOP  shift, and go to state 75

    LOGICOP   reduce using rule 39 (rel_expression)
    $default  reduce using rule 37 (logic_expression)


State 61

   41 simple_expression: term .
   44 term: term . MULOP unary_expression

    MULOP  shift, and go to state 76

    $default  reduce using rule 41 (simple_expression)


State 62

   43 term: unary_expression .

    $default  reduce using rule 43 (term)


State 63

   45 unary_expression: factor .

    $default  reduce using rule 45 (unary_expression)


State 64

   36 expression: variable . ASSIGNOP logic_expression
   46 factor: variable .
   49       | variable . INCOP
   50       | variable . DECOP

    INCOP     shift, and go to state 77
    DECOP     shift, and go to state 78
    ASSIGNOP  shift, and go to state 79

    $default  reduce using rule 46 (factor)


State 65

   31 statement: compound_statement .

    $default  reduce using rule 31 (statement)


State 66

   56 compound_statement: LCURL $@4 RCURL .

    $default  reduce using rule 56 (compound_statement)


State 67

   52 variable: ID LTHIRD . expression RTHIRD

    ID           shift, and go to state 49
    CONST_INT    shift, and go to state 50
    CONST_FLOAT  shift, and go to state 51

    expression         go to state 80
    logic_expression   go to state 58
    rel_expression     go to state 59
    simple_expression  go to state 60
    term               go to state 61
    unary_expression   go to state 62
    factor             go to state 63
    variable           go to state 64


State 68

   23 declaration_list: ID .
   24                 | ID . LTHIRD CONST_INT RTHIRD
   25                 | ID . LTHIRD error RTHIRD

    LTHIRD  shift, and go to state 15

    $default  reduce using rule 23 (declaration_list)


State 69

   54 compound_statement: LCURL $@3 statements RCURL .
